--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,11 @@
 
 /* Your CSS Code here. */
+p{
+	width:300px;
+	background-color:lightblue;
+	padding:50px;
+	border:15px;
+	border-style:solid;
+	border-color:blue;
+	margin:20px;
+}
